# attendance-automation

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt
.agents/skills/nanjing-kaoqin/: SKILL.md
.agents/skills/nanjing-kaoqin/references/: rules.md
.claude/skills/nanjing-kaoqin/scripts/: kq_run.ps1
.github/workflows/: build-windows.yml
app/: __init__.py  _make_sample.py  _smoke_gui.py  build_exe.bat  delegate.py  engine.py  grid.py  gui.py  icons.py  memory.py  mingxu.spec  model.py  panels.py  reimburse.py  reimburse_ocr.py  reimburse_panels.py  test_engine.py  test_golden.py  test_reimburse.py  theme.py  undo.py  widgets.py  启动考勤.bat  启动考勤.command
docs/: GUI上位机设计.md  UI与交互设计简报.md  optimization-plan.md
docs/attendance-automation/handoff/: README.md  spec.css  设计交付说明.html
docs/attendance-automation/handoff/prototype/: app.jsx  chrome.jsx  dashboard.jsx  data.js  grid.jsx  inspector.jsx  ready.jsx  styles.css  todo-panel.jsx  ui.jsx  考勤复核工作台.html
