[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanjing-kaoqin"
version = "1.0.1"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5,<6.9",
    "openpyxl>=3.1,<3.2",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0,<6.5"]

[project.scripts]
kaoqin = "app.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
