[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mingxu"
version = "1.0.1"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5,<6.9",
    "openpyxl>=3.1,<3.2",
    "pypdf>=4.0,<5.0",
    "rapidocr>=3.9,<4.0",
    "onnxruntime>=1.20,<1.28",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.10,<6.22"]

[project.scripts]
mingxu = "app.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
